--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [project]
 name = "yuxin-auth"
-version = "2025.7.25.0"
+version = "2025.7.25.1"
 description = "使用requests登录宇信系统"
 readme = "README.md"
 requires-python = ">=3.12"
@@ -8,3 +8,33 @@ dependencies = [
     "ddddocr>=1.5.6",
     "requests>=2.32.4",
 ]
+
+[build-system]
+requires = ["hatchling"]
+build-backend = "hatchling.build"
+
+[tool.hatch.build.targets.sdist]
+ignore-vcs = true
+packages = ["yuxin_auth"]
+exclude = ["__pycache__", "*.pyc", "*.exe~", "*.syso"]
+
+[tool.hatch.build.targets.wheel]
+ignore-vcs = true
+packages = ["yuxin_auth"]
+exclude = ["__pycache__", "*.pyc", "*.exe~", "*.syso"]
+
+[project.scripts]
+
+[tool.ruff.lint]
+ignore = [
+    "E722", # 不要使用裸 except（except:），应指定异常类型
+    "F541", # f-string 中未使用的表达式
+    "F841", # 局部变量被赋值但未使用
+    # "F401", # 导入但未使用的模块
+    "F811", # 变量或函数重复定义
+    "E731", # 不要把 lambda 表达式赋值给变量，建议用 def
+    "E402", # import 语句不在文件顶部
+]
+
+[tool.ruff.format]
+quote-style = "single"
